Remove autocomplete wrappers from form inputs

--- a/index.html
+++ b/index.html
@@ -243,17 +243,11 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="orderId">Order ID</label>
-                                <div class="autocomplete-wrapper">
-                                    <input type="text" id="orderId" placeholder="e.g., ORD001" required autocomplete="off">
-                                    <div class="autocomplete-suggestions" id="orderIdSuggestions"></div>
-                                </div>
+                                <input type="text" id="orderId" placeholder="e.g., ORD001" required>
                             </div>
                             <div class="form-group">
                                 <label for="restaurantName">Restaurant Name</label>
-                                <div class="autocomplete-wrapper">
-                                    <input type="text" id="restaurantName" placeholder="e.g., Dragon Wok, Burger King" required autocomplete="off">
-                                    <div class="autocomplete-suggestions" id="restaurantSuggestions"></div>
-                                </div>
+                                <input type="text" id="restaurantName" placeholder="e.g., Dragon Wok, Burger King" required>
                             </div>
                         </div>
                         <div class="form-row">
@@ -465,7 +459,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2026 FoodFleet - Food Delivery Manager. All rights reserved. | Developed by Ajay Yadav</p>
+                <p>&copy; 2024 FoodFleet - Food Delivery Manager. All rights reserved. | Developed by Ajay Yadav</p>
             </div>
         </div>
     </footer>
