Replace logo icon with animated GIF

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoodFleet - Food Delivery Manager</title>
+    <link rel="icon" type="image/png" href="Image/meal.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +14,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="#hero" class="logo">
-                <span class="logo-icon">🍔</span>
+                <img src="Image/cookbook.gif" alt="FoodFleet Logo" class="logo-icon">
                 <span class="logo-text">FoodFleet</span>
             </a>
             <ul class="nav-links">
@@ -425,7 +426,7 @@
             <div class="footer-grid">
                 <div class="footer-column">
                     <a href="#hero" class="footer-logo">
-                        <span class="logo-icon">🍔</span>
+                        <img src="Image/cookbook.gif" alt="FoodFleet Logo" class="logo-icon">
                         <span class="logo-text">FoodFleet</span>
                     </a>
                     <p>Your trusted food delivery partner. Smart order management with real-time tracking and intelligent delivery assignment. Available 24/7 for your convenience.</p>
